--- a/package.json
+++ b/package.json
@@ -3,24 +3,38 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path angularapp --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.5",
+    "@angular/cdk": "^10.2.5",
+    "@angular/cli": "~10.1.6",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
+    "@angular/compiler-cli": "~10.1.5",
     "@angular/core": "~10.1.5",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.1.5",
+    "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@popperjs/core": "^2.5.3",
+    "bootstrap": "^4.5.3",
+    "express": "^4.17.1",
+    "firebase": "^7.13.1",
+    "jquery": "^3.5.1",
+    "ngx-toastr": "^13.1.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -41,6 +55,16 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "@angular-devkit/architect": ">= 0.900 < 0.1100",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
+  },
+  "engines": {
+    "node": "v12.18.4",
+    "npm": "6.14.8"
   }
 }
